# accm-ttg

./: CMakeLists.txt  README.md
interfaces/: IBusiness.h  IDb.h
src/accmTtgApp/: main.cpp
src/accmTtgBusiness/: AccmDefinitions.h  BusinessDefinitions.h  BusinessLogic.cpp  BusinessLogic.h  Message.h
src/accmTtgDb/: DbManager.cpp  DbManager.h
src/accmTtgUI/: Dashboard.cpp  Dashboard.h  MessageList.cpp  MessageList.h
src/accmTtgUI/qml/: ConversationArea.qml  Dashboard.qml  Home.qml  Message.qml  SideBar.qml  main.qml  qml.qrc
src/accmTtgUI/qml/customControls/: CVControl.qml  CVLabel.qml  HomeButton.qml  MessageInputs.qml  PlusButton.qml  SideBarButton.qml
src/accmTtgUI/qml/elements/: MessageBodyAck.qml  MessageHeader.qml  MessageSelector.qml
